--- a/demo.html
+++ b/demo.html
@@ -1,119 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HTML Editor JS</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/editor.css" />
-  </head>
-  <body>
-    <h1>HTML Editor JS</h1>
-    <button class="btn btn-primary" id="btn-edit">Start editing</button>
-    <div class="container-fluid">
-      <div class="row">
-        <div id="block-01" class="editable col-3">
-          <h2>Block 01</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
-            nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
-            ligula massa, varius a, semper congue, euismod non, mi. Proin
-            porttitor, orci nec nonummy molestie, enim est eleifend mi, non
-            fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
-            scelerisque vitae, consequat in, pretium a, enim. Pellentesque
-            congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
-            bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
-            eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
-            ante ipsum primis in faucibus orci l
-          </p>
-        </div>
 
-        <div id="block-02" class="editable col-3">
-          <h2>Block 02</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
-            nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
-            ligula massa, varius a, semper congue, euismod non, mi. Proin
-            porttitor, orci nec nonummy molestie, enim est eleifend mi, non
-            fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
-            scelerisque vitae, consequat in, pretium a, enim. Pellentesque
-            congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
-            bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
-            eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
-            ante ipsum primis in faucibus orci l
-          </p>
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HTML Editor JS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/editor.css" />
+</head>
 
-        <div id="block-03" class="editable col-3">
-          <h2>Block 03</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
-            nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
-            ligula massa, varius a, semper congue, euismod non, mi. Proin
-            porttitor, orci nec nonummy molestie, enim est eleifend mi, non
-            fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
-            scelerisque vitae, consequat in, pretium a, enim. Pellentesque
-            congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
-            bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
-            eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
-            ante ipsum primis in faucibus orci l
-          </p>
-        </div>
+<body>
+  <h1>HTML Editor JS</h1>
+  <button class="btn btn-primary" id="btn-edit">Start editing</button>
+  <div class="container-fluid">
+    <div class="row">
+      <div id="block-01" class="editable col-3">
+        <h2>Block 01</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+          risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+          nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
+          ligula massa, varius a, semper congue, euismod non, mi. Proin
+          porttitor, orci nec nonummy molestie, enim est eleifend mi, non
+          fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
+          scelerisque vitae, consequat in, pretium a, enim. Pellentesque
+          congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
+          bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
+          eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
+          ante ipsum primis in faucibus orci l
+        </p>
+      </div>
 
-        <div id="block-04" class="editable col-3">
-          <h2>Block 04</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
-            nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
-            ligula massa, varius a, semper congue, euismod non, mi. Proin
-            porttitor, orci nec nonummy molestie, enim est eleifend mi, non
-            fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
-            scelerisque vitae, consequat in, pretium a, enim. Pellentesque
-            congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
-            bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
-            eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
-            ante ipsum primis in faucibus orci l
-          </p>
-        </div>
+      <div id="block-02" class="editable col-3">
+        <h2>Block 02</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+          risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+          nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
+          ligula massa, varius a, semper congue, euismod non, mi. Proin
+          porttitor, orci nec nonummy molestie, enim est eleifend mi, non
+          fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
+          scelerisque vitae, consequat in, pretium a, enim. Pellentesque
+          congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
+          bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
+          eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
+          ante ipsum primis in faucibus orci l
+        </p>
+      </div>
+
+      <div id="block-03" class="editable col-3">
+        <h2>Block 03</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+          risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+          nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
+          ligula massa, varius a, semper congue, euismod non, mi. Proin
+          porttitor, orci nec nonummy molestie, enim est eleifend mi, non
+          fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
+          scelerisque vitae, consequat in, pretium a, enim. Pellentesque
+          congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
+          bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
+          eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
+          ante ipsum primis in faucibus orci l
+        </p>
+      </div>
+
+      <div id="block-04" class="editable col-3">
+        <h2>Block 04</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+          risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+          nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
+          ligula massa, varius a, semper congue, euismod non, mi. Proin
+          porttitor, orci nec nonummy molestie, enim est eleifend mi, non
+          fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
+          scelerisque vitae, consequat in, pretium a, enim. Pellentesque
+          congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum
+          bibendum augue. Praesent egestas leo in pede. Praesent blandit odio
+          eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum
+          ante ipsum primis in faucibus orci l
+        </p>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/editor.js"></script>
-    <script>
-      document
-        .getElementById("btn-edit")
-        .addEventListener("click", function () {
-          if (this.innerHTML === "Start editing") {
-            this.innerHTML = "Stop editing";
-            startEditing();
-          } else {
-            this.innerHTML = "Start editing";
-            stopEditing();
-          }
-        });
-    </script>
-  </body>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+  <script src="js/editor.js"></script>
+  <script>
+    document
+      .getElementById("btn-edit")
+      .addEventListener("click", function () {
+        if (this.innerHTML === "Start editing") {
+          this.innerHTML = "Stop editing";
+          startEditing();
+        } else {
+          this.innerHTML = "Start editing";
+          stopEditing();
+        }
+      });
+  </script>
+</body>
+
 </html>
